2000-08-03  Joseph S. Myers  <jsm28@cam.ac.uk>

	* atc/input.c, atc/log.c, atc/update.c, hack/config.h,
	hack/def.monst.h, hack/def.rm.h, hack/hack.cmd.c, hack/hack.h,
	robots/move_robs.c, robots/play_level.c: Comment out text after
	#endif.
	* bcd/bcd.c: Use unsigned char and casts to avoid -pedantic
	warnings.
	* pom/pom.c: Likewise.
	* fortune/unstr/unstr.c, hack/makedefs.c: Include <stdlib.h>.
	* lib/fgetln.c: Include <string.h>.

	* adventure/setup.c, battlestar/com1.c, battlestar/com7.c,
	battlestar/cypher.c, battlestar/extern.h, boggle/mkdict/mkdict.c,
	boggle/mkindex/mkindex.c, fortune/datfiles/netbsd,
	fortune/strfile/strfile.c, hack/makedefs.c, monop/initdeck.c:
	Update from NetBSD CVS.

2000-08-02  Joseph S. Myers  <jsm28@cam.ac.uk>

	* sail/extern.h (abs): Don't define; breaks with glibc 2.2.

2000-07-22  Joseph S. Myers  <jsm28@cam.ac.uk>

	* hack/hack.tty.c, monop/getinp.c, rogue/message.c, trek/phaser.c:
	Update from NetBSD CVS.

2000-07-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* adventure/done.c, adventure/main.c, adventure/subr.c, bcd/bcd.c,
	canfield/cfscores/cfscores.c, countmail/countmail.6,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes2,
	fortune/datfiles/netbsd, gomoku/stoc.c, hack/hack.h,
	hunt/huntd/get_names.c, morse/morse.c, phantasia/Makefile.bsd,
	ppt/ppt.c, rogue/init.c, sail/Makefile.bsd, sail/lo_main.c,
	sail/pl_1.c, sail/pl_7.c, trek/computer.c, trek/destruct.c,
	trek/getpar.c, trek/setup.c, trek/torped.c: Update from NetBSD
	CVS.

2000-05-28  Joseph S. Myers  <jsm28@cam.ac.uk>

	* adventure/Makefile.bsd, adventure/main.c,
	arithmetic/arithmetic.c, atc/main.c, backgammon/backgammon/main.c,
	backgammon/teachgammon/teach.c, battlestar/battlestar.c,
	bcd/bcd.c, boggle/boggle/bog.c, caesar/caesar.c, caesar/rot13.in,
	canfield/canfield/canfield.c, canfield/cfscores/cfscores.c,
	cribbage/crib.c, fish/fish.c, fortune/datfiles/netbsd,
	gomoku/main.c, hack/hack.termcap.c, hangman/main.c, mille/mille.c,